# E-Voting-Application

backend/: CMakeLists.txt  CMakeLists.txt.txt  e_voting.cpp  e_voting.h  main.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.jsx
frontend/src/Contexts/: AdminContext.jsx  AuthContext.jsx  VotingContext.jsx
frontend/src/api/: axios.js
frontend/src/lib/: schemas.jsx
frontend/src/pages/: About.jsx  AccessDeniedPage.jsx  AdminDashboard.jsx  Contact.jsx  HomePage.jsx  Login.jsx  Navbar.jsx  NotFoundPage.jsx  SignUp.jsx  VoterDashboard.jsx
frontend/src/routes/: protected-route.jsx  route.jsx
